web-infras/parser/tests/fixtures/esprima/ES6/class/migrated_0021/output.txt
[SyntaxError]: Classes may not have static property named prototype. (1,18)
1|class A {static ["prototype"](){}}
 |                ^
